# speechd-ng

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EXPERT_BRIEFING.md  GUARDRAILS.md  HANDOFF.md  IMPLEMENTATION_PLAN.md  README.md  RELEASE_NOTES_v0.2.0.md  ROADMAP.md  SECURITY.md  Speech.toml  TEAM_EXPERTS.md  check_tokens.rs  dump_safetensors.rs  install.sh  task.md  walkthrough.md
.github/workflows/: rust.yml  verify-offline.yml
benchmarks/: latency_test.py
data/: org.speech.service.policy
docs/: ANALYSIS.md  API_REFERENCE.md  ARCHITECTURE_REVIEW.md  BROCHURE_DRAFT.md  CLI_MANUAL.md  SYSV_INIT.md  TESTING.md
examples/: python_client.py  spatial_demo.py  speechd_ng_client.py
packaging/flatpak/: org.speech.Service.yml
packaging/rpm/: speechd-ng.spec  speechserverdaemon.spec
repo/: summary  summary.idx
repo/refs/heads/app/org.speech.Service/x86_64/: master
repo/refs/heads/appstream/: x86_64
repo/refs/heads/appstream2/: x86_64
repo/refs/heads/runtime/org.speech.Service.Debug/x86_64/: master
repo/summaries/: 51546740b2977839c0b9a5ca526b5acd5ebe5b331e93bfa467529f3160d1f040-20fcfb8ecebeb662a6519308bbae8af880dff4dd679497cc4cdf2519b1ab3d75.delta  51546740b2977839c0b9a5ca526b5acd5ebe5b331e93bfa467529f3160d1f040-8df775c3f2b445ceb2056cf905ca770eccc193ab2427e62c7abfda7eb5d5cd5e.delta  6bc636a66147a0acb5257af68b28967ba4b84f7b820e86909837bc838b994666-20fcfb8ecebeb662a6519308bbae8af880dff4dd679497cc4cdf2519b1ab3d75.delta  8df775c3f2b445ceb2056cf905ca770eccc193ab2427e62c7abfda7eb5d5cd5e-20fcfb8ecebeb662a6519308bbae8af880dff4dd679497cc4cdf2519b1ab3d75.delta  9656f3446fb0a7b8568f467d4fb37d344e27372ebf4d49a2d20919d3a2f9bff6-20fcfb8ecebeb662a6519308bbae8af880dff4dd679497cc4cdf2519b1ab3d75.delta  9656f3446fb0a7b8568f467d4fb37d344e27372ebf4d49a2d20919d3a2f9bff6-8df775c3f2b445ceb2056cf905ca770eccc193ab2427e62c7abfda7eb5d5cd5e.delta  a8047bbbf2c27416132e70ea4e453170962f6e57f4826827e01eb2e823ffd673-20fcfb8ecebeb662a6519308bbae8af880dff4dd679497cc4cdf2519b1ab3d75.delta  a8047bbbf2c27416132e70ea4e453170962f6e57f4826827e01eb2e823ffd673-8df775c3f2b445ceb2056cf905ca770eccc193ab2427e62c7abfda7eb5d5cd5e.delta
scripts/: concurrency_test.sh  verify_system.sh
src/: chronicler.rs  config_loader.rs  cortex.rs  ear.rs  engine.rs  fingerprint.rs  lib.rs  main.rs  proactive.rs  rate_limiter.rs  security.rs  service.rs  ssip.rs  vision.rs  wakeword_bridge.py  wyoming.rs  wyoming_bridge.py
src/backends/: espeak.rs  mod.rs  piper.rs  whisper.rs
src/context/: mod.rs  wayland.rs  x11.rs
systemd/: org.speech.Service.service  speechd-ng.service  speechd-vision.service
tests/: integration_test.rs  stress_tests.rs
tests/common/: mod.rs
