[package]
name = "speechd-ng"
version = "0.7.2"
edition = "2021"
authors = ["StarTuz <startuz@example.com>"]
description = "A modern, secure, next-generation speech server for Linux written in Rust."
license = "MIT"
repository = "https://github.com/StarTuz/speechd-ng"

[[bin]]
name = "speechd-ng"
path = "src/main.rs"

[[bin]]
name = "speechd-control"
path = "src/bin/speechd-control.rs"

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
config = "0.15.19"
cpal = "0.17.0"
hound = "3.5.1"
lazy_static = "1.5.0"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }
ringbuf = "0.4.8"
rodio = "0.17.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
dirs = "6.0.0"
tokio = { version = "1.48.0", features = ["full"] }
wait-timeout = "0.2.1"
whisper-rs = "0.15"
zbus = { version = "4.4.0", features = ["tokio"] }
zbus_polkit = "4.0"

[features]
default = []
cuda = ["whisper-rs/cuda"]

[package.metadata.deb]
maintainer = "StarTuz <startuz@example.com>"
copyright = "2025, StarTuz"
license-file = ["LICENSE", "4"]
depends = "libasound2, libdbus-1-3, python3, espeak-ng"
section = "utils"
priority = "optional"
assets = [
    ["target/release/speechd-ng", "usr/bin/", "755"],
    ["target/release/speechd-control", "usr/bin/", "755"],
    ["src/wakeword_bridge.py", "usr/lib/speechd-ng/", "755"],
    ["src/wyoming_bridge.py", "usr/lib/speechd-ng/", "755"],
    ["systemd/speechd-ng.service", "usr/lib/systemd/user/", "644"],
    ["README.md", "usr/share/doc/speechd-ng/README", "644"],
]
conf-files = []

