[package]
name = "speechd-ng"
version = "1.0.0"
edition = "2021"
authors = ["StarTuz <startuz@example.com>"]
description = "A modern, secure, next-generation speech server for Linux written in Rust."
license = "MIT"
repository = "https://github.com/StarTuz/speechd-ng"

[[bin]]
name = "speechd-ng"
path = "src/main.rs"

[[bin]]
name = "speechd-control"
path = "src/bin/speechd-control.rs"

[[bin]]
name = "speechd-vision"
path = "src/bin/speechd-vision.rs"
required-features = ["vision"]

[dependencies]
# Core dependencies (always included)
chrono = "0.4"
clap = { version = "=4.5.23", features = ["derive"] }
config = "0.15.19"
cpal = "0.17.0"
hound = "3.5.1"
lazy_static = "1.5.0"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls", "stream"] }
ringbuf = "0.4.8"
rodio = "0.17.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
dirs = "6.0.0"
tokio = { version = "1.48.0", features = ["full"] }
wait-timeout = "0.2.1"
whisper-rs = "0.15"
regex = "1.10"
deunicode = "1.6"
zbus = { version = "4.4.0", features = ["tokio"] }
zbus_polkit = "4.0"
vosk = "0.3"
sled = "0.34.7"
base64 = "0.22.1"
async-trait = "0.1.89"
sysinfo = "0.33"
futures-util = "0.3"

# Vision dependencies (optional - only for speechd-vision binary)
candle-core = { version = "0.8.0", optional = true }
candle-nn = { version = "0.8.0", optional = true }
candle-transformers = { version = "0.8.0", optional = true }
hf-hub = { version = "0.4.1", optional = true }
tokenizers = { version = "0.19.1", optional = true }
image = { version = "0.25.9", default-features = false, features = ["jpeg", "png"], optional = true }

[features]
default = []
# RAG: Semantic search using BERT embeddings (adds ~30s compile time)
rag = ["candle-core", "candle-nn", "candle-transformers", "hf-hub", "tokenizers"]
# Vision: Separate binary for screen description (speechd-vision)
vision = ["rag", "image"]
# CUDA: GPU acceleration for vision (requires CUDA 11.x-12.6)
cuda = ["vision", "whisper-rs/cuda", "candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]

[dev-dependencies]
mockall = "0.14.0"
mockito = "1.7.1"
proptest = "1.9.0"
serial_test = "3.3.1"
tokio-test = "0.4.5"
tempfile = "3.10"

[package.metadata.deb]
maintainer = "StarTuz <startuz@example.com>"
copyright = "2025, StarTuz"
license-file = ["LICENSE", "4"]
depends = "libasound2, libdbus-1-3, espeak-ng, libvosk"
section = "utils"
priority = "optional"
assets = [
    ["target/release/speechd-ng", "usr/bin/", "755"],
    ["target/release/speechd-control", "usr/bin/", "755"],
    ["systemd/speechd-ng.service", "usr/lib/systemd/user/", "644"],
    ["README.md", "usr/share/doc/speechd-ng/README", "644"],
]
conf-files = []

